--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@strapi-community/cloudinary-media-library": "^1.0.1",
     "@strapi/plugin-cloud": "5.17.0",
     "@strapi/plugin-users-permissions": "5.17.0",
+    "@strapi/provider-upload-cloudinary": "^5.17.0",
     "@strapi/strapi": "5.17.0",
     "better-sqlite3": "11.3.0",
+    "cloudinary": "^2.7.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "react": "^18.0.0",
@@ -27,7 +30,6 @@
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
     "npm": ">=6.0.0"
